feat: make AI outputs recruiter-positive

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -216,9 +216,9 @@
     "loading": "جارٍ تحليل الملف...",
     "error": "حدث خطأ أثناء إنشاء الرؤى. حاول مرة أخرى.",
     "scoreNote": {
-      "excellent": "ملف تنافسي للغاية",
-      "good": "ملف قوي مع إمكانات",
-      "improve": "ملف متنامٍ"
+      "excellent": "????? ????? ??????",
+      "good": "????? ????? ????",
+      "improve": "????? ????? ???????"
     },
     "radar": {
       "ai": "الذكاء الاصطناعي/التعلم الآلي",
@@ -230,17 +230,17 @@
   },
   "resumeAnalyzer": {
     "title": "محلل السيرة الذاتية",
-    "subtitle": "احصل على تحليل مفصل لسيرتك الذاتية مع اقتراحات للتحسين",
-    "analyze": "تحليل السيرة الذاتية",
-    "reanalyze": "إعادة التحليل",
+    "subtitle": "???? ??? ???? ?????? ???? ??????????? ???? ?????? ???????.",
+    "analyze": "????? ???? ???????????",
+    "reanalyze": "????? ????? ??????",
     "loading": "جارٍ تحليل السيرة الذاتية...",
-    "completeness": "اكتمال السيرة الذاتية",
-    "atsScore": "توافق ATS",
-    "sections": "تحليل الأقسام",
-    "gaps": "مجالات التحسين",
+    "completeness": "??? ????? ??????",
+    "atsScore": "?????? ???????",
+    "sections": "???? ??? ???? ?????",
+    "gaps": "???? ?????? ???????????",
     "strengths": "نقاط القوة",
-    "improvements": "توصيات",
-    "overall": "الملخص العام",
+    "improvements": "????????? ??????",
+    "overall": "???? ???????????",
     "error": "حدث خطأ أثناء تحليل السيرة الذاتية. حاول مرة أخرى.",
     "sectionNames": {
       "personal": "المعلومات الشخصية",
