--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -216,9 +216,9 @@
     "loading": "प्रोफ़ाइल का विश्लेषण हो रहा है...",
     "error": "इनसाइट्स बनाने में त्रुटि हुई। कृपया पुनः प्रयास करें।",
     "scoreNote": {
-      "excellent": "अत्यधिक प्रतिस्पर्धी प्रोफ़ाइल",
-      "good": "क्षमता के साथ मजबूत प्रोफ़ाइल",
-      "improve": "बढ़ती प्रोफ़ाइल"
+      "excellent": "???? ????? ???????? ??????",
+      "good": "????? ???????? ??????",
+      "improve": "????????? ???????? ??????"
     },
     "radar": {
       "ai": "AI/ML",
@@ -230,17 +230,17 @@
   },
   "resumeAnalyzer": {
     "title": "CV विश्लेषक",
-    "subtitle": "सुधार सुझावों के साथ अपने CV का विस्तृत विश्लेषण प्राप्त करें",
-    "analyze": "CV विश्लेषण करें",
-    "reanalyze": "फिर से विश्लेषण करें",
+    "subtitle": "?? CV ?? ?????-??????, ????????? ???????",
+    "analyze": "???????? ?????? ?????",
+    "reanalyze": "?????? ??? ?? ?????",
     "loading": "CV का विश्लेषण हो रहा है...",
-    "completeness": "CV पूर्णता",
-    "atsScore": "ATS संगतता",
-    "sections": "सेक्शन विश्लेषण",
-    "gaps": "सुधार के क्षेत्र",
+    "completeness": "????????? ?? ??????",
+    "atsScore": "???????? ???????",
+    "sections": "????? ?????? ?? ??????",
+    "gaps": "???????? ?????????",
     "strengths": "ताकतें",
-    "improvements": "सिफारिशें",
-    "overall": "समग्र सारांश",
+    "improvements": "?????? ????????????",
+    "overall": "???????? ??????",
     "error": "CV विश्लेषण में त्रुटि हुई। कृपया पुनः प्रयास करें।",
     "sectionNames": {
       "personal": "व्यक्तिगत जानकारी",
