--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -216,9 +216,9 @@
     "loading": "プロフィールを分析中...",
     "error": "インサイトの生成に失敗しました。もう一度お試しください。",
     "scoreNote": {
-      "excellent": "非常に競争力のあるプロフィール",
-      "good": "潜在力のある確かなプロフィール",
-      "improve": "成長中のプロフィール"
+      "excellent": "???????????????",
+      "good": "????????????",
+      "improve": "????????????????"
     },
     "radar": {
       "ai": "AI/ML",
@@ -230,17 +230,17 @@
   },
   "resumeAnalyzer": {
     "title": "履歴書アナライザー",
-    "subtitle": "改善提案付きで履歴書を詳しく分析します",
-    "analyze": "履歴書を分析",
-    "reanalyze": "再分析",
+    "subtitle": "???????????????????????",
+    "analyze": "?????????",
+    "reanalyze": "??????",
     "loading": "履歴書を分析中...",
-    "completeness": "履歴書の完成度",
-    "atsScore": "ATS適合度",
-    "sections": "セクション分析",
-    "gaps": "改善点",
+    "completeness": "?????????",
+    "atsScore": "??????????",
+    "sections": "?????",
+    "gaps": "????????????",
     "strengths": "強み",
-    "improvements": "改善提案",
-    "overall": "総合サマリー",
+    "improvements": "??????????",
+    "overall": "?????????",
     "error": "履歴書の分析に失敗しました。もう一度お試しください。",
     "sectionNames": {
       "personal": "個人情報",
