feat: refocus AI highlights and hero attribution

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -22,7 +22,9 @@
       "dl": "التعلم العميق",
       "genai": "الذكاء الاصطناعي التوليدي",
       "python": "بايثون"
-    }
+    },
+    "attributionTitle": "سيرة ذاتية باستخدام Vitae.ai",
+    "attributionDescription": "أداة ذكية لإنشاء سير ذاتية رقمية مبتكرة. إنشاء: Martin Bundy"
   },
   "about": {
     "title": "عني",
@@ -201,7 +203,7 @@
     }
   },
   "insights": {
-    "title": "رؤى الذكاء الاصطناعي للمجندين",
+    "title": "إضاءات الذكاء الاصطناعي",
     "subtitle": "تحليل ذكي للملف المهني",
     "generate": "إنشاء التحليل",
     "regenerate": "إعادة التوليد",
@@ -216,9 +218,9 @@
     "loading": "جارٍ تحليل الملف...",
     "error": "حدث خطأ أثناء إنشاء الرؤى. حاول مرة أخرى.",
     "scoreNote": {
-      "excellent": "????? ????? ??????",
-      "good": "????? ????? ????",
-      "improve": "????? ????? ???????"
+      "excellent": "إشارة ممتازة",
+      "good": "إشارة قوية",
+      "improve": "إشارة إيجابية"
     },
     "radar": {
       "ai": "الذكاء الاصطناعي/التعلم الآلي",
@@ -253,22 +255,22 @@
     }
   },
   "skillRecommender": {
-    "title": "توصيات المهارات",
-    "subtitle": "اكتشف مهارات مكملة لتعزيز ملفك",
-    "generate": "الحصول على توصيات",
-    "regenerate": "إعادة التوليد",
-    "loading": "جارٍ تحليل ملفك...",
-    "recommended": "مهارات موصى بها",
-    "trends": "اتجاهات السوق",
-    "advice": "نصيحة مهنية",
-    "difficulty": "الصعوبة",
-    "time": "الوقت التقديري",
-    "resources": "الموارد",
-    "error": "حدث خطأ أثناء إنشاء التوصيات. حاول مرة أخرى.",
+    "title": "تعزيز نقاط القوة",
+    "subtitle": "إبراز مهارات CV الموجودة",
+    "generate": "إنشاء الإبراز",
+    "regenerate": "إعادة الإنشاء",
+    "loading": "جاري تحليل نقاط القوة...",
+    "recommended": "نقاط قوة رئيسية",
+    "trends": "إشارات السوق",
+    "advice": "التموضع",
+    "difficulty": "العمق",
+    "time": "الدليل",
+    "resources": "نقاط إثبات",
+    "error": "حدث خطأ أثناء إنشاء الإبرازات، حاول مرة أخرى。",
     "difficultyLabels": {
-      "easy": "سهل",
-      "medium": "متوسط",
-      "hard": "صعب"
+      "easy": "أساسي",
+      "medium": "متقدم",
+      "hard": "خبير"
     }
   },
   "demo": {
