--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -22,7 +22,9 @@
       "dl": "डीप लर्निंग",
       "genai": "जेनरेटिव AI",
       "python": "Python"
-    }
+    },
+    "attributionTitle": "Vitae.ai से बनाया गया CV",
+    "attributionDescription": "AI-पावर्ड डिजिटल CV बनाने का इनोवेटिव टूल। निर्माता: Martin Bundy"
   },
   "about": {
     "title": "मेरे बारे में",
@@ -201,8 +203,8 @@
     }
   },
   "insights": {
-    "title": "रिक्रूटर्स के लिए AI इनसाइट्स",
-    "subtitle": "पेशेवर प्रोफ़ाइल का स्मार्ट विश्लेषण",
+    "title": "AI इंसाइट्स",
+    "subtitle": "प्रोफाइल का स्मार्ट विश्लेषण",
     "generate": "विश्लेषण बनाएं",
     "regenerate": "फिर से बनाएं",
     "profileScore": "प्रोफ़ाइल शक्ति",
@@ -216,9 +218,9 @@
     "loading": "प्रोफ़ाइल का विश्लेषण हो रहा है...",
     "error": "इनसाइट्स बनाने में त्रुटि हुई। कृपया पुनः प्रयास करें।",
     "scoreNote": {
-      "excellent": "???? ????? ???????? ??????",
-      "good": "????? ???????? ??????",
-      "improve": "????????? ???????? ??????"
+      "excellent": "बहुत मजबूत सिग्नल",
+      "good": "मजबूत सिग्नल",
+      "improve": "सकारात्मक सिग्नल"
     },
     "radar": {
       "ai": "AI/ML",
@@ -253,22 +255,22 @@
     }
   },
   "skillRecommender": {
-    "title": "कौशल सिफारिशें",
-    "subtitle": "अपने प्रोफ़ाइल को मजबूत करने के लिए पूरक कौशल खोजें",
-    "generate": "सिफारिशें प्राप्त करें",
+    "title": "मजबूती बृद्धि",
+    "subtitle": "CV में मौजूद कौशलों को हाइलाइट करें",
+    "generate": "हाइलाइट बनाएं",
     "regenerate": "फिर से बनाएं",
-    "loading": "आपकी प्रोफ़ाइल का विश्लेषण हो रहा है...",
-    "recommended": "सिफारिश किए गए कौशल",
-    "trends": "बाज़ार रुझान",
-    "advice": "करियर सलाह",
-    "difficulty": "कठिनाई",
-    "time": "अनुमानित समय",
-    "resources": "संसाधन",
-    "error": "सिफारिशें बनाने में त्रुटि हुई। कृपया पुनः प्रयास करें।",
+    "loading": "मजबूतियों का विश्लेषण चल रहा है...",
+    "recommended": "मुख्य मजबूतियाँ",
+    "trends": "मार्केट सिग्नल",
+    "advice": "पोजिशनिंग",
+    "difficulty": "गहराई",
+    "time": "प्रमाण",
+    "resources": "प्रमाण बिंदु",
+    "error": "हाइलाइट बनाने में त्रुटि हुई। फिर से कोशिश करें।",
     "difficultyLabels": {
-      "easy": "आसान",
-      "medium": "मध्यम",
-      "hard": "कठिन"
+      "easy": "बेस",
+      "medium": "एडवांस्ड",
+      "hard": "एक्सपर्ट"
     }
   },
   "demo": {
